import org.slf4j.event.Level

plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.80'
}

version = minecraft_version + "-" + mod_version + "-" + mod_version_tag
group = mod_group_id

base {
    archivesName = mod_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    //accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}


sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = "https://maven.covers1624.net/" }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://maven.theillusivec4.top/' }
    maven { url = 'https://maven.melanx.de/' }
    maven { url = "https://maven.architectury.dev" }
    maven { url = "https://maven.saps.dev/minecraft" }
    maven { url = 'https://www.jitpack.io' }
    maven { url = "https://maven.terraformersmc.com/" }
    maven {
        name = 'Twilight Forest'
        url = 'https://modmaven.dev/'
    }
    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    implementation ("com.blamejared.crafttweaker:CraftTweaker-neoforge-${minecraft_version}:${crafttweaker_version}")
    implementation ("curse.maven:jade-324717:${jade_id}")

    compileOnly ("top.theillusivec4.curios:curios-neoforge:${curios_version}:api")
    runtimeOnly ("top.theillusivec4.curios:curios-neoforge:${curios_version}")

    implementation ("dev.latvian.mods:kubejs-neoforge:${kubejs_version}")
    //implementation ("dev.latvian.mods:rhino-neoforge:${rhino_version}")
    //implementation ("dev.architectury:architectury-neoforge:${architectury_version}")

    implementation ("curse.maven:charm-of-undying-316873:${cou_version}")
    implementation ("curse.maven:projecte-226410:${projecte_version}")
    runtimeOnly ("curse.maven:mekanism-268560:${mek_version}")
    runtimeOnly ("curse.maven:applied-energistics-2-223794:${ae2_version}")


    compileOnly ("org.projectlombok:lombok:$lombok_version")
    annotationProcessor ("org.projectlombok:lombok:$lombok_version")

    // compile against the JEI API but do not include it at runtime
    compileOnly ("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly ("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    // REI
    compileOnly ("me.shedaniel:RoughlyEnoughItems-api-neoforge:${rei_version}")
    compileOnly ("me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}")

    // EMI
    compileOnly ("dev.emi:emi-neoforge:${emi_version}")

    if (recipe_viewer == 'jei')
        runtimeOnly ("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
    else if (recipe_viewer == 'rei')
        runtimeOnly ("me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}")
    else if (recipe_viewer == 'emi')
        runtimeOnly ("dev.emi:emi-neoforge:${emi_version}")
    else
        println("unknown recipe viewer: $recipe_viewer")
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             issue_tracker          : issue_tracker,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata



publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        if (System.getenv('MAVEN_USERNAME') != null && System.getenv('MAVEN_PASSWORD') != null) {
            maven {
                name 'S3'
                url = 'https://maven.nova-committee.cn/s3'

                credentials {
                    username System.getenv('MAVEN_USERNAME')
                    password System.getenv('MAVEN_PASSWORD')
                }
            }
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

